--- a/Mini_Project_5.ipynb
+++ b/Mini_Project_5.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tayabba-19/Mini-Project-5-Mental-Health-Survey/blob/main/Mini_Project_5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ixObjUJriGPc"
       },
       "source": [
@@ -797,8 +807,9 @@
         "\n",
         "For clearer insights, this dataset has been thoughtfully divided into two distinct categories:\n",
         "\n",
-        "1) ***Depressed Person*** — Person who reported experiencing some form of depression when asked about their mental health.\n",
-        "2) ***Not Depressed Person*** — Person who reported feeling positive about their mental well-being.\n",
+        "1) ***Depressed Person*** — Person who reported experiencing some form of depression when asked about their mental health. **Depressed person is indicate 1**\n",
+        "\n",
+        "2) ***Not Depressed Person*** — Person who reported feeling positive about their mental well-being. **Not Depressed person indicate 0** .\n",
         "\n",
         "This categorization helps to better understand patterns, behaviors, and risk factors associated with student mental health."
       ]
@@ -1004,7 +1015,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "theory likhni hai family history of mental illness."
+        "This pie chart represent the distribution of participants based on whether they have a **family history of mental illness**.\n",
+        "\n",
+        "The data is divided into **two categories:**\n",
+        "\n",
+        "\n",
+        "*   **Yes** - Around 49.7% of participants reported **Yes**,meaning they have a family history of mental illness.\n",
+        "*   **No** - Around 50.3% of participants reported **No**, meaning they do not have a family history of mental illness.\n",
+        "\n",
+        "The distribution is **almost equal**, showing that family history is present in nearly half of the participants.\n",
+        "\n",
+        "This pie chart shows that nearly half of the participants have a family history of mental illness,which is an important factor in mental health analysis.\n",
+        "\n"
       ],
       "metadata": {
         "id": "UkeG_eniRMcD"
@@ -1052,7 +1074,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "thoery iska"
+        "This bar chart shows the **distribution of participants based on daily work or study hours**\n",
+        "\n",
+        "**X-axis:** Number of work/study ours (0 to 12 hours)\n",
+        "\n",
+        "**Y-axis:** Number of participants\n",
+        "\n",
+        "Each bar represents **how many participants fall into a specific hour category.**\n",
+        "\n",
+        "A higher number of participants fall in the range of **8 to 10 hours**, indicating that most people spend a full working or study day.\n",
+        "\n",
+        "Fewer particiapnts are observes at very low hours **(0-2)**, suggesting fewer people are completely inactive.\n",
+        "\n",
+        "\n",
+        "Work or Study hours act as an important features in prediciting mental health conditions, as **excessive workload may increase stress and depression risk.**"
       ],
       "metadata": {
         "id": "RDSGgL14Tf2Q"
@@ -1114,7 +1149,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "iski theory"
+        "This bar chart represent Have you ever had suicidal thoughts\n",
+        "\n",
+        "**X-axis:** Response category (Yes, No)\n",
+        "\n",
+        "**Y-axis:** Number of participants\n",
+        "\n",
+        "Each bar shows the count of participants for each response.\n",
+        "\n",
+        "**Yes** indicate they have experienced suicidal thoughts.\n",
+        "\n",
+        "**No** indicate they have not experienced such thoughts.\n",
+        "\n",
+        "This indicates that suicidal thoughts are present in a considerable portion of the population, which is a serious mental health concern.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "mhaOsgbPcbvO"
@@ -1173,7 +1222,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "iski thoery\n"
+        "This bar chart shows the distribution of participants based on their dietary habits.\n",
+        "\n",
+        "The **X-axis** represent different dietary habits such as healthy,moderate,unhealthy etc.\n",
+        "\n",
+        "The **Y-axis** represent the number of participants.\n",
+        "Each bar indicates how many participants follow a particular type of diet.\n",
+        "\n",
+        "A **healthy diet** help to improve the mood, concentration and reduces  the stress.\n",
+        "\n",
+        "An **unhealthy diet** may lead to fatigue, mood swings and a higher risk of mental health problems.\n",
+        "\n",
+        "**Dietary habits** are also considered in mental health analysis, as poor eating habits can increase the risk of depression  and anxiety.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "WU9CDwuwb_tV"
@@ -1229,7 +1291,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "iski theory"
+        "This pie chart represents the percentage distribution of participants based on their sleep duration.\n",
+        "The categories include:\n",
+        "\n",
+        "*  Less than 5 hours\n",
+        "\n",
+        "*  5-6 hours\n",
+        "\n",
+        "\n",
+        "* 7-8 hours\n",
+        "\n",
+        "*  More than 8 hours\n",
+        "\n",
+        "Each slice of the pie chart shows the percentage of participants belonging to that sleep category.\n",
+        "\n",
+        "Irregular or insufficient sleep is strongly associated with mental health issues such as stress, anxiety and depression.\n",
+        "This analysis helps in understanding how sleep duration may affect mental health conditions.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "GcBOtfqvc2F6"
@@ -1285,7 +1374,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "iski theory"
+        "This pie chart represent the distribution of participants based on different levels of academic pressure.\n",
+        "The pressure levels are shown in numerical form such as 1 to 5 . where,\n",
+        "\n",
+        "Lower values indicate **low academic pressure**.\n",
+        "\n",
+        "HIgher values indicate **high academic pressure.**\n",
+        "\n",
+        "Each slice shows the percentage of participants in each pressure level.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "9166kDK2doZ9"
@@ -1341,16 +1439,49 @@
     {
       "cell_type": "markdown",
       "source": [
-        "iski theory"
+        "This pie chart represents the percentage distribution of participants based on different levels of financial stress. The stress levels are shown on a scale from 1 to 5 , where,\n",
+        "\n",
+        "Lower values indicates **low financial stress**.\n",
+        "\n",
+        "Higher values indicates **high financial stress.**\n",
+        "\n",
+        "\n",
+        "Financial stress is considered an important factor in mental helath studies, as it can increase the risk of mental helath problems.\n"
       ],
       "metadata": {
         "id": "msbY5ym8eQVG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Conclusion**"
+      ],
+      "metadata": {
+        "id": "_K4x57N4bcsn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this project, we develop a deep learning- based model to predict depression using mental health survey data. The dataset included various factors such as sleep duration, academic pressure, financial stress, dietary habits, work or study hours, family history of mental illness and suicidal thoughts.\n",
+        "\n",
+        "The data was firstly cleaned and preprocessed to handle missing values and ensure consistency. Exploratory Data Analysis was performed using bar charts and pie charts to undertsand the patterns and relationships between different mental helath factors.\n",
+        "\n",
+        "A deep learing model was then trained to classify individuals as **Depressed (1)** and **Not Depressed (0)**. The model successfully learned patterns from the data and was able to make predictions based on multiple psychological and lifestyle fctors.\n",
+        "\n",
+        "The results show that factors like high academic pressure,financial stress, poor sleep and unhealthy lifestyle habits play an important role in depression prediction. This project demonstrates that deep learning can be an effective tool for ealry detection of depression which can help in timelt intervension and mental health support."
+      ],
+      "metadata": {
+        "id": "XPXd4r3wb7pl"
       }
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNWhIraJWh3c96EI41JfTI9",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
