--- a/Mini_Project_5.ipynb
+++ b/Mini_Project_5.ipynb
@@ -1475,12 +1475,30 @@
       "metadata": {
         "id": "XPXd4r3wb7pl"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Streamlit Application**"
+      ],
+      "metadata": {
+        "id": "WQqdV4yTe_7k"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://mini-project-5-mental-health-survey-f3zj9nvywx8ewdnck7qqd2.streamlit.app/"
+      ],
+      "metadata": {
+        "id": "JWtlzt5qfH6-"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWhIraJWh3c96EI41JfTI9",
+      "authorship_tag": "ABX9TyNakUYi0V3VsuV84eB8OmYI",
       "include_colab_link": true
     },
     "kernelspec": {
