--- a/Mini_Project_5.ipynb
+++ b/Mini_Project_5.ipynb
@@ -1486,6 +1486,78 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import streamlit as st\n",
+        "import numpy as np\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense\n",
+        "\n",
+        "# ---------------- Page Config ----------------\n",
+        "st.set_page_config(page_title=\"Depression Prediction App\", layout=\"centered\")\n",
+        "\n",
+        "st.title(\"Depression Prediction from Mental Health Survey\")\n",
+        "st.write(\"Enter details and click Predict\")\n",
+        "\n",
+        "# ---------------- Deep Learning Model ----------------\n",
+        "# 1 = Depressed, 0 = Not Depressed\n",
+        "X_train = np.array([\n",
+        "    [1, 22, 6, 5, 7, 6, 5, 6, 1, 6],\n",
+        "    [0, 35, 2, 3, 8, 7, 7, 7, 0, 2],\n",
+        "    [1, 28, 7, 6, 6, 5, 4, 5, 1, 5],\n",
+        "    [0, 45, 1, 2, 7, 8, 8, 7, 0, 1],\n",
+        "])\n",
+        "\n",
+        "y_train = np.array([1, 0, 1, 0])\n",
+        "\n",
+        "model = Sequential([\n",
+        "    Dense(32, activation=\"relu\", input_shape=(10,)),\n",
+        "    Dense(16, activation=\"relu\"),\n",
+        "    Dense(1, activation=\"sigmoid\")\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\")\n",
+        "model.fit(X_train, y_train, epochs=40, verbose=0)\n",
+        "\n",
+        "# ---------------- User Inputs ----------------\n",
+        "gender = st.selectbox(\"Gender\", [\"Male\", \"Female\"])\n",
+        "gender = 1 if gender == \"Male\" else 0\n",
+        "\n",
+        "age = st.number_input(\"Age\", min_value=15, max_value=100, value=25, step=1)\n",
+        "academic_pressure = st.number_input(\"Academic Pressure (1–10)\", 1, 10, 5)\n",
+        "work_pressure = st.number_input(\"Work Pressure (1–10)\", 1, 10, 5)\n",
+        "cgpa = st.number_input(\"CGPA\", min_value=0.0, max_value=10.0, value=7.0, step=0.1)\n",
+        "study_satisfaction = st.number_input(\"Study Satisfaction (1–10)\", 1, 10, 5)\n",
+        "job_satisfaction = st.number_input(\"Job Satisfaction (1–10)\", 1, 10, 5)\n",
+        "sleep_duration = st.number_input(\"Sleep Duration (Hours)\", 1, 12, 6)\n",
+        "\n",
+        "suicidal_thoughts = st.selectbox(\"Have you ever had suicidal thoughts?\", [\"Yes\", \"No\"])\n",
+        "suicidal_thoughts = 1 if suicidal_thoughts == \"Yes\" else 0\n",
+        "\n",
+        "financial_stress = st.number_input(\"Financial Stress (1–10)\", 1, 10, 5)\n",
+        "\n",
+        "# ---------------- Prediction ----------------\n",
+        "if st.button(\"Predict Depression\"):\n",
+        "    user_input = np.array([[gender, age, academic_pressure, work_pressure,\n",
+        "                            cgpa, study_satisfaction, job_satisfaction,\n",
+        "                            sleep_duration, suicidal_thoughts, financial_stress]])\n",
+        "\n",
+        "    prob = model.predict(user_input)[0][0]\n",
+        "\n",
+        "    st.subheader(\"Prediction Result\")\n",
+        "\n",
+        "    if prob >= 0.5:\n",
+        "        st.error(f\"Depression Detected (1)\")\n",
+        "    else:\n",
+        "        st.success(f\"No Depression Detected (0)\")\n"
+      ],
+      "metadata": {
+        "id": "YCQnpSQb7U3b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "https://mini-project-5-mental-health-survey-b85povras4wtuj2zbbarka.streamlit.app/"
@@ -1498,7 +1570,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGQFslWIybkl8nSF8OpaB5",
+      "authorship_tag": "ABX9TyMwZPg+/uctsvy5k7yYPKX3",
       "include_colab_link": true
     },
     "kernelspec": {
